corrected conflicts, shifted images to server

--- a/client/src/pages/Contact.css
+++ b/client/src/pages/Contact.css
@@ -51,6 +51,7 @@ h2 {
 }
 
 .contactintroblurb {
+    font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
